# pgrx-wasi

./: Cargo.toml  README.md  prepare-release.sh
.github/workflows/: runas.yml
cargo-pgrx/: Cargo.toml
cargo-pgrx/src/command/: init.rs  install.rs  schema.rs  test.rs
cargo-pgrx/src/templates/: cargo_toml
pgrx/: Cargo.toml
pgrx-bindgen/: Cargo.toml
pgrx-bindgen/src/: build.rs
pgrx-examples/: README.md
pgrx-examples/hello-world/: Cargo.toml  wasm32-wasip1.json
pgrx-examples/hello-world/src/: lib.rs
pgrx-examples/world/: *.wasm  Cargo.toml  README.md  browser-test.sh  easywasi.js  index.html
pgrx-examples/world/.cargo/: config  config.toml
pgrx-examples/world/src/: lib.rs  main.rs
pgrx-macros/: Cargo.toml
pgrx-macros/src/: lib.rs
pgrx-pg-config/: Cargo.toml
pgrx-pg-config/src/: lib.rs
pgrx-pg-sys/: Cargo.toml
pgrx-pg-sys/include/: pg12.h  pg13.h  pg14.h  pg15.h  pg16.h  pg17.h
pgrx-pg-sys/src/include/: pg12.rs  pg12_oids.rs  pg13.rs  pg14.rs  pg15.rs  pg16.rs  pg17.rs
pgrx-pg-sys/src/submodules/: oids.rs  panic.rs
pgrx-sql-entity-graph/: Cargo.toml
pgrx-tests/: Cargo.toml
pgrx-tests/src/: framework.rs
pgrx-tests/src/tests/: guc_tests.rs  memcxt_tests.rs  pg_cast_tests.rs  roundtrip_tests.rs  spi_tests.rs
pgrx-tests/tests/compile-fail/: escaping-spiclient-1209-prep-stmt.stderr
pgrx/src/: bgworkers.rs  callbacks.rs  hooks.rs  lib.rs  memcxt.rs
pgrx/src/datum/: mod.rs
pgrx/src/spi/: client.rs  query.rs
