[package]
name = "helloworld"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]

# uncomment these if compiling outside of 'pgrx'
# [profile.dev]
# panic = "unwind"

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 0
# lto = "fat"
# codegen-units = 1