[package]
name = "world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]

# uncomment these if compiling outside of 'pgrx'
# [profile.dev]
# panic = "unwind"

# [profile.release]
# panic = "unwind"
# opt-level = 3
# lto = "fat"
# codegen-units = 1